[package]
name = "turl"
version = "0.2.0"
authors = ["Minioin <minioin@protonmail.com>"]
description = "TinyUrl implementation using sha256 hashing."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "Readme.md"
repository = "https://github.com/minioin/turl/"
keywords = ["tinyurl", "url-shortner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.2.0"
url = "2.1.1"
sha2 = "0.8.1"